[package]
name = "discombobulate"
version = "0.1.3"
authors = ["Jon Moroney <darakian@gmail.com>"]
edition = "2018"
description = "Compare and contrast directories"
license = "LGPL-3.0"
homepage = "https://github.com/darakian/discombobulate"
repository = "https://github.com/darakian/discombobulate"
documentation = "https://docs.rs/discombobulate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
